attached_assets/Pasted-npx-hardhat-console-network-localhost-Welcome-to-Node-js-v22-16-0-Type-help-for-more-informa-1759080720242_1759080720244.txt
npx hardhat console --network localhost
Welcome to Node.js v22.16.0.
Type ".help" for more information.
> // Get contracts
ractAt("MockERC20", "0x5FbDB2315678afecb367f032d93F642f64180aa3");  
undefined
> const usdc = await ethers.getContconst dai = await ethers.getContractAt("MockERC20", "0xe7f1725E7734CE288F8367e1Bb14
Uncaught SyntaxError: 
const usdc = await ethers.getContconst dai = await ethers.getContractAt("MockERC20", "0xe7f1725E7734CE288F8367e1Bb14
                                       ^

Unexpected token 'd'
> 3E90bb3F0512");
3E90bb3F0512");
^^^^

Uncaught SyntaxError: Invalid or unexpected token
> const usdt = await ethers.getContractAt("MockERC20", "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0");
usdc.faucet(ethers.parseUnits("10000", 6));   // USDC (6 decimals)  
undefined
>
> // Mint 10,000 tokens each
undefined
> await await dai.faucet(ethers.parseUnits("10000", 18));   // DAI (18 decimals)
Uncaught ReferenceError: dai is not defined
    at REPL8:1:45
> await usdt.faucet(ethers.parseUnits("10000", 6));   // USDT (6 decimals)
ContractTransactionResponse {
  provider: HardhatEthersProvider {
    _hardhatProvider: LazyInitializationProviderAdapter {
      _providerFactory: [AsyncFunction (anonymous)],
      _emitter: [EventEmitter],
      _initializingPromise: [Promise],
      provider: [BackwardsCompatibilityProviderAdapter]
    },
    _networkName: 'localhost',
    _blockListeners: [],
    _transactionHashListeners: Map(0) {},
    _eventListeners: []
  },
  blockNumber: 18,
  blockHash: '0xb40035638dcc96ab4834f427f24e6b17298c3f0b524dc598ab0895341b641ee9',
  index: undefined,
  hash: '0xaf49a51264251c2af10325c3ef1b77f78ff51225927423652626cdc06d75864e',
  type: 2,
  to: '0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0',
  from: '0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266',
  nonce: 17,
  gasLimit: 30000000n,
  gasPrice: 122388180n,
  maxPriorityFeePerGas: 29341033n,
  maxFeePerGas: 122388180n,
  maxFeePerBlobGas: null,
  data: '0x5791589700000000000000000000000000000000000000000000000000000002540be400',
  value: 0n,
  chainId: 31337n,
  signature: Signature { r: "0x58e099097d67877d2bf762f0c61a45ccd3318eb33e45861144cf7bc41641f0c0", s: "0x59ef902f052ea63d7bdef9e3ade24ff3f363ee0ddee75068bfb76ddd40c3c205", yParity: 0, networkV: null },    
  accessList: [],
  blobVersionedHashes: null,
  authorizationList: null
}
>
> // Exit console
undefined
> .exit
PS C:\Users\Administrator\OneDrive\Desktop\LoneVerse> 